--- a/개인/emotion-diary/src/App.css
+++ b/개인/emotion-diary/src/App.css
@@ -10,6 +10,8 @@ body{
     margin: 0;
 }
 
+html, body, div, p, button, a, span{margin: 0;}
+
 
 @media (min-width:650px) {    
     .App{
@@ -116,3 +118,72 @@ header button{
     font-size: 18px;
     cursor: pointer;
 }
+
+/* DiaryItem */
+.DiaryItem{
+    padding: 15px 0;
+    border-bottom: 1px solid #e2e2e2;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.DiaryItem .emotion_img_wrapper{
+    cursor: pointer;
+    min-width: 120px;
+    height: 80px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.DiaryItem .emotion_img_wrapper_1{
+    background-color: #64c964;
+}
+
+.DiaryItem .emotion_img_wrapper_2{
+    background-color: #9dd772;
+}
+
+.DiaryItem .emotion_img_wrapper_3{
+    background-color: #fdce17;
+}
+
+.DiaryItem .emotion_img_wrapper_4{
+    background-color: #fd8446;
+}
+
+.DiaryItem .emotion_img_wrapper_5{
+    background-color: #fd565f;
+}
+
+.DiaryItem .emotion_img_wrapper img{
+    width: 50%;
+}
+
+.DiaryItem .info_wrapper{
+    flex-grow: 1;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.DiaryItem .diary_date{
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 5px;
+}
+
+.DiaryItem .diary_content_preview{
+    font-size: 18px;
+}
+
+.DiaryItem .btn_wrapper{
+    min-width: 70px;
+    display: flex;
+    align-items: center;
+}
+
+/* EmotionItem */
+.EmotionItem{}
+.EmotionItem-on{background: red;}
+.EmotionItem-off{}
