--- a/협업/react-tving-clone/src/components/Carousel/Carousel.module.scss
+++ b/협업/react-tving-clone/src/components/Carousel/Carousel.module.scss
@@ -1,7 +1,10 @@
 .Carousel {
     .Swiper {
-        background-color: pink;
+        // background-color: pink;
         margin-bottom: 20px;
+    }
+    .SwiperSlide {
+        background-color: pink;
     }
 }
 .main {
