검색 레이어 추가

--- a/협업/react-tving-clone/src/assets/scss/app.scss
+++ b/협업/react-tving-clone/src/assets/scss/app.scss
@@ -73,3 +73,6 @@ button{
     padding: 0;
     cursor: pointer;
 }
+body a, button, dd, div, dl, dt, html, input, label, li, p, span, td, textarea, th, ul{
+    font-family: 'Noto Sans KR', sans-serif;
+}
