경로변경, 폴더네임 변경

--- a/협업/react-tving-clone/src/assets/css/global.scss
+++ b/협업/react-tving-clone/src/assets/css/global.scss
@@ -68,3 +68,12 @@ img{
     vertical-align: middle;
 }
 
+.blind{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  z-index: -1;
+}
