--- a/협업/react-tving-clone/src/component/Main/MainBody.scss
+++ b/협업/react-tving-clone/src/component/Main/MainBody.scss
@@ -51,12 +51,12 @@
         }
 
         &-button-prev{
-            background-image: url(./../assets/images/icon_slide_left.svg);
+            background-image: url(./../../assets/images/icon_slide_left.svg);
             left: 0;
         }
 
         &-button-next{
-            background-image: url(./../assets/images/icon_slide_right.svg);
+            background-image: url(./../../assets/images/icon_slide_right.svg);
             right: 0;
         }        
 
