--- a/협업/react-tving-clone/src/components/list/Carousel/Carousel.module.scss
+++ b/협업/react-tving-clone/src/components/list/Carousel/Carousel.module.scss
@@ -7,13 +7,13 @@
         background-color: pink;
     }
 }
-.main {
-    .Swiper {
-        height: 500px;
-    }
-}
-.list {
-    .Swiper {
-        height: 200px;
-    }
-}
+// .main {
+//     .Swiper {
+//         height: 500px;
+//     }
+// }
+// .list {
+//     .Swiper {
+//         height: 200px;
+//     }
+// }
