--- a/협업/react-tving-clone/src/assets/scss/app.scss
+++ b/협업/react-tving-clone/src/assets/scss/app.scss
@@ -76,3 +76,9 @@ button{
 body a, button, dd, div, dl, dt, html, input, label, li, p, span, td, textarea, th, ul{
     font-family: 'Noto Sans KR', sans-serif;
 }
+
+@media all and (max-width: 768px) {
+   html{
+    font-size: 10px;
+   } 
+}
