--- a/협업/react-tving-clone/src/components/common/Header/SearchLayer/SearchLayer.module.scss
+++ b/협업/react-tving-clone/src/components/common/Header/SearchLayer/SearchLayer.module.scss
@@ -11,7 +11,8 @@
     .layer{
         position: relative;
         max-height: 100%;
-        height: 100vw;
+        height: 100vh;
+        overflow: auto;
         background-color: rgba(25, 25, 25, 0.99);
         box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 10px 0px;
         overflow: hidden;
