--- a/협업/react-tving-clone/src/component/Header/Header.module.scss
+++ b/협업/react-tving-clone/src/component/Header/Header.module.scss
@@ -1,13 +1,12 @@
 .Header {
-    background: #000;
     position: fixed;
     top: 0;
     z-index: 200;
     left: 0;
     right: 0;
     width: 100%;
-    padding: 0 45px;
-    height: 75px;
+    padding: 0 4rem 0 3rem;
+    height: 5.833rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -30,10 +29,17 @@
     }
 
     .logo {
-        display: block;
-        width: 139px;
-        height: 57px;
-        margin-right: 30px;
+        display: flex;
+        align-items: center;
+        margin: 0;
+        height: 100%;
+        margin-right: 2rem;
+        opacity: 1;
+
+        div{
+            width: 10.5625rem;
+            height: 4.333rem;
+        }
     }
 
     .menu {
@@ -42,13 +48,23 @@
         }
 
         li {
-            margin-right: 40px;
             a{
-                color: #d9d9d9;
-                font-size: 17px;
+                margin-right: 2.5rem;
+                color: rgb(217, 217, 217);
+                font-size: 1.333rem;
+                font-weight: 400;
+                
+                &:hover{
+                    color: rgb(255, 255, 255);
+                }
             }
         }
     }
 }
-aside{margin-left: auto;display: flex;gap: 40px;align-items: center;}
+aside{
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    position: relative;
+}
 
