slide props 전달 수정,  lazy road image 적용

--- a/협업/react-tving-clone/src/component/Main/MainBody.scss
+++ b/협업/react-tving-clone/src/component/Main/MainBody.scss
@@ -97,6 +97,7 @@
         border-radius: 4px;
         font-weight: 900;
         position: absolute;
+        z-index: 1;
 
         &-lt{
             left: 2px;
@@ -205,6 +206,7 @@
         left: 0;
         bottom: 0;
         color: red;
+        z-index: 1;
     }
 
     .banner_img{
