--- a/협업/react-tving-clone/src/components/list/Carousel/Carousel.module.scss
+++ b/협업/react-tving-clone/src/components/list/Carousel/Carousel.module.scss
@@ -1,5 +1,5 @@
 .Carousel {
-    padding: 60px 60px 40px;
+    padding: 60px 0 40px;
     .Swiper {
         // background-color: pink;
         margin-bottom: 20px;
@@ -7,24 +7,33 @@
         overflow: hidden;
     }
     .SwiperSlide {
-        background-color: pink;
+        border-radius: 4px;
+        overflow: hidden;
     }
 }
-.bannerMain {
-    height: 690px;
-}
+// .bannerMain {
+//     height: 690px;
+// }
 .bannerSub {
-    height: 240px;
+    // height: 240px;
+    .SwiperSlide {
+        background-color: #262626;
+    }
 }
-.bannerList {
-    height: 293px;
-}
-.bandBasic {
-    height: 440px;
-}
-.bandBig {
-    height: 650px;
-}
-.bandRank {
-    height: 440px;
+// .bannerList {
+//     height: 293px;
+// }
+// .bandBasic {
+//     height: 440px;
+// }
+// .bandBig {
+//     height: 650px;
+// }
+// .bandRank {
+//     height: 440px;
+// }
+.bandTitle {
+    font-size: 26px;
+    margin-bottom: 16px;
+    font-weight: bold;
 }
