--- a/협업/react-tving-clone/src/component/Header/Header.module.scss
+++ b/협업/react-tving-clone/src/component/Header/Header.module.scss
@@ -12,7 +12,32 @@
     align-items: center;
     box-sizing: border-box;
 
-    &:before {
+    
+    &.fill::before{
+        content: "";
+        position: absolute;
+        z-index: -1;
+        inset: -1px 0px 0px;
+        transform: translate3d(0px, 0px, 0px);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+        color: rgb(255, 255, 255);
+        transition: backdrop-filter 0.3s linear 0s, background-color 0.3s linear 0s;
+        backdrop-filter: blur(30px);
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    &.shadow::before{
+        content: "";
+        position: absolute;
+        z-index: -1;
+        inset: -1px 0px 0px;
+        transform: translate3d(0px, 0px, 0px);
+        backdrop-filter: blur(0px);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+        color: rgb(255, 255, 255);
+        transition: backdrop-filter 0.3s linear 0s, background-color 0.3s linear 0s;
+        background-color: rgba(0, 0, 0, 0);
+    }
+    &.top::before {
         content: '';
         position: absolute;
         z-index: -1;
@@ -67,4 +92,3 @@ aside{
     align-items: center;
     position: relative;
 }
-
