--- a/협업/react-tving-clone/src/component/Selectbox/Selectbox.scss
+++ b/협업/react-tving-clone/src/component/Selectbox/Selectbox.scss
@@ -1,4 +1,8 @@
-.SelectBrand{
+.react-select-wrap{
+    display: flex;
+    align-items: center;
+}
+.Selectbox{
     .react-select{
         &__control{
             background-color: transparent;
@@ -30,7 +34,7 @@
                 width: 5px;
             }
             ::-webkit-scrollbar-thumb {
-                background-color: rgb(163, 163, 163); 
+                background-color: #a3a3a3; 
                 border-radius: 5px;
             }
 
@@ -40,7 +44,10 @@
 
             .react-select__option{
                 background: #212121;
+                cursor: pointer;
+
                 &:hover{
+                    color: rgb(222, 222, 222);
                     background-color: rgb(25 25 25/1);
                 }
             }
